# cinema_proj

./: .env.sample  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
migrations/: env.py
migrations/versions/: 0e2442390595_initial_schema.py
src/: celerybeat-schedule
src/app/: celery_app.py  main.py  tasks.py
src/app/core/: config.py  security.py
src/app/db/: session.py
src/app/models/: cart_models.py  movie_models.py  order_models.py  user_models.py
src/app/routes/: movies.py
src/app/routes/admin/: admin_movies.py
src/app/routes/cart/: carts.py
src/app/routes/certifications/: certifications.py
src/app/routes/directors/: directors.py
src/app/routes/genres/: genres.py
src/app/routes/orders/: orders.py
src/app/routes/stars/: stars.py
src/app/schemas/: auth_schema.py  cart_schema.py  checkout_schema.py  movie_schema.py  order_schema.py
src/app/services/: auth.py  email_.py
tests/: conftest.py  test_core.py  test_models.py  test_services.py
tests/test_routes/: test_routes_admin.py  test_routes_carts.py  test_routes_cert.py  test_routes_directors.py  test_routes_genres.py  test_routes_movies.py  test_routes_orders.py  test_routes_stars.py
