[project]
name = "cinema-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "pydantic[dotenv] (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pg8000 (>=1.31.2,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiosmtpd (>=1.4.6,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "stripe (>=12.2.0,<13.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "trio (>=0.30.0,<0.31.0)",
    "isort (>=6.0.1,<7.0.0)",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
psycopg2-binary = "^2.9.10"
black = "^25.1.0"
isort = "^6.0.1"

